# golden-regression-harness

./: README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: report.html
goldens/: baseline.json
scripts/: update_goldens.sh
src/golden_regression_harness.egg-info/: PKG-INFO  SOURCES.txt
src/harness/: compare.py  simulator.py
tests/: test_faults.py  test_golden.py
